Crash on wayland backend destroy
This is on wlroots 0.16 commit 3b36b960. I've got a coredump if poking around could be of any help.
bt full
#0 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
tid = 12912
ret = 0
pd = <optimized out>
old_mask = {__val = {2701166}}
ret = <optimized out>
#1 0x00007f74eb36477f in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
No locals.
#2 0x00007f74eb3181a2 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
ret = <optimized out>
#3 0x00007f74eb302477 in __GI_abort () at abort.c:79
save_stage = 1
act = {__sigaction_handler = {sa_handler = 0x20, sa_sigaction = 0x20}, sa_mask = {__val = {2701166, 2701166, 2701166, 2701166, 2701166,
2701166, 3672768, 140725619392512, 0, 0, 140725619412048, 140725619410208, 1, 0, 0, 140725619410208}}, sa_flags = 0,
sa_restorer = 0x0}
#4 0x000000000029e699 in os.abort () at /home/ifreund/.local/lib/zig/std/os.zig:560
No locals.
#5 0x00000000002b31bd in debug.handleSegfaultPosix (sig=11, info=0x7ffd3c8e40b0, ctx_ptr=0x7ffd3c8e3f80)
at /home/ifreund/.local/lib/zig/std/debug.zig:1979
addr = 8
#6 <signal handler called>
No locals.
#7 0x00007f74eb64f3b7 in wl_list_remove (elm=0x19f3a78) at ../src/wayland-util.c:56
No locals.
#8 0x00007f74eb52ae84 in destroy_wl_buffer (buffer=0x19f3a50) at ../backend/wayland/output.c:116
No locals.
#9 0x00007f74eb5298b7 in backend_destroy (backend=0xe31590) at ../backend/wayland/backend.c:456
wl = 0xe31590
output = 0xe31348
tmp_output = 0xe31348
buffer = 0x19f3a50
tmp_buffer = 0xffffffffffffffe8
#10 0x00007f74eb513351 in wlr_backend_destroy (backend=0xe31590) at ../backend/backend.c:63
No locals.
#11 0x00007f74eb527b8a in multi_backend_destroy (wlr_backend=0xe31500) at ../backend/multi/backend.c:58
sub = 0xe391f0
backend = 0xe31500
#12 0x00007f74eb513351 in wlr_backend_destroy (backend=0xe31500) at ../backend/backend.c:63
No locals.
--Type <RET> for more, q to quit, c to continue without paging--
#13 0x000000000025d257 in Server.deinit (self=0x3803f8 <main[server]>) at Server.zig:151
No locals.
#14 0x000000000025cd69 in main.main () at main.zig:108